--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.10.2</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.panforge</groupId>
+		    <artifactId>robots</artifactId>
+		    <version>1.4.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
