--- a/pratica05/exercicio5/src/main/resources/application.properties
+++ b/pratica05/exercicio5/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, validate, update): com "update"
 # o esquema do banco de dados será automaticamente atualizado de
 # acordo com as entidades Java encontradas no projeto.
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 # Estratégia para a criação de nomes:
 #spring.jpa.hibernate.naming.physical-
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
