--- a/pratica05/exercicio5/src/main/resources/application.properties
+++ b/pratica05/exercicio5/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 # URL de conexão com o banco "maquinadebusca":
 # spring.datasource.url = jdbc:mysql://localhost:3306/maquinadebusca
 # https://www.db4free.net
-spring.datasource.url = jdbc:mysql://85.10.205.173:3306/maquinadebusca
+spring.datasource.url = jdbc:mysql://85.10.205.173:3306/maquinadebusca?useSSL=false
 # Username and password:
 # root / root
 spring.datasource.username = roota1b2c3
