--- a/projeto_final/src/main/resources/application.properties
+++ b/projeto_final/src/main/resources/application.properties
@@ -7,7 +7,8 @@ server.port = 8080
 # =Configurações JPA / HIBERNATE=
 # ===============================
 # Apresentar log das consultas SQL:
-spring.jpa.show-sql = false
+spring.jpa.show-sql = true
+#spring.jpa.properties.hibernate.format_sql=true
 # Hibernate ddl auto (create, create-drop, validate, update): com "update"
 # o esquema do banco de dados será automaticamente atualizado de
 # acordo com as entidades Java encontradas no projeto.
@@ -27,6 +28,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 # spring.datasource.url = jdbc:mysql://localhost:3306/maquinadebusca
 # https://www.db4free.net
 spring.datasource.url = jdbc:mysql://85.10.205.173:3306/maquinadebusca?useSSL=false
+# heroku
+#spring.datasource.url = jdbc:mysql://us-cdbr-iron-east-02.cleardb.net/heroku_fafb83b86f9f899?reconnect=true
 # Username and password:
 # root / root
 spring.datasource.username = roota1b2c3
