--- a/pratica14/exercício01/app/src/main/resources/application.properties
+++ b/pratica14/exercício01/app/src/main/resources/application.properties
@@ -1,32 +1,39 @@
 # ===============================
-# =          Configura\u00e7\u00f5es do Servidor Web         =
+# =Configurações do Servidor Web=
 # ===============================
-# Porta para comunica\u00e7\u00e3o no Servidor Web:
+# Porta para comunicação no Servidor Web:
 server.port = 8080
-
 # ===============================
-# =       Configura\u00e7\u00f5es JPA / HIBERNATE           =
+# =Configurações JPA / HIBERNATE=
 # ===============================
 # Apresentar log das consultas SQL:
-spring.jpa.show-sql = true
-# Hibernate ddl auto (create, create-drop, validate, update): com "update" 
-# o esquema do banco de dados ser\u00e1 automaticamente atualizado de  
-# acordo com as entidades Java encontradas no projeto. 
-spring.jpa.hibernate.ddl-auto = create
-# Estrat\u00e9gia para a cria\u00e7\u00e3o de nomes:
+spring.jpa.show-sql = false
+#spring.jpa.properties.hibernate.format_sql=true
+# Hibernate ddl auto (create, create-drop, validate, update): com "update"
+# o esquema do banco de dados será automaticamente atualizado de
+# acordo com as entidades Java encontradas no projeto.
+spring.jpa.hibernate.ddl-auto = update
+# Estratégia para a criação de nomes:
+#spring.jpa.hibernate.naming.physical-
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-# O dialeto SQL faz com que o Hibernate gere melhores SQL's para o Sistema Gerenciador de Banco de Dados escolhido:
+# O dialeto SQL faz com que o Hibernate gere melhores SQL's para 
+#o Sistema Gerenciador de Banco de Dados escolhido:
+##spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-
 # ======================================
-# =                           DATA SOURCE                                   =
-# = Configura\u00e7\u00f5es para conex\u00e3o com o banco de dados. =
+# =DATA SOURCE=
+# = Configurações para conexão com o banco de dados. =
 # ======================================
-# URL de conex\u00e3o com o banco "maquinadebusca":
-spring.datasource.url = jdbc:mysql://localhost:3306/maquinadebusca?useSSL=false
+# URL de conexão com o banco "maquinadebusca":
+# spring.datasource.url = jdbc:mysql://localhost:3306/maquinadebusca
+# https://www.db4free.net
+spring.datasource.url = jdbc:mysql://85.10.205.173:3306/maquinadebusca?useSSL=false
+# heroku
 # Username and password:
-spring.datasource.username = root
-spring.datasource.password = root
-# Mant\u00e9m a conec\u00e7\u00e3o aberta se o sistema ficar inativo por muito tempo (necess\u00e1rio em produ\u00e7\u00e3o):
+# root / root
+spring.datasource.username = roota1b2c3
+spring.datasource.password = roota1b2c3
+# Mantém a conecção aberta se o sistema ficar inativo por muito tempo (necessário em
+#produção):
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
